[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "coverage_test"
authors = [{name = "Thomas Grainger", email = "tagrain@gmail.com"}]
license = {file = "LICENSE"}
classifiers = ["License :: OSI Approved :: MIT License"]
dynamic = ["version", "description"]

[project.optional-dependencies]
test = [
  "pytest",
  "pytest-cov",
]


[tool.pytest.ini_options]
addopts = [
  "--strict-config",
  "--strict-markers",
  "--cov-report=term-missing:skip-covered",
  "--cov-config=pyproject.toml",
  "--cov=",
]
xfail_strict = true
filterwarnings = [
  "error",
]

[tool.coverage.run]
branch = true
source_pkgs = ["coverage_test"]

[tool.coverage.report]
exclude_also = ["if TYPE_CHECKING:"]

[tool.tox]
env_list = ["py313"]

[tool.tox.env_run_base]
depends = []
commands = [["pytest", { replace = "posargs", extend = true, default=["--cov-fail-under=100"] }]]
extras = ["test"]
